# titration_mycobot2

./: run_groot.sh  run_lab2_executor_launch.sh  run_lab2_ready_launch.sh
syringe_ui/: README.md  package.xml  setup.cfg  setup.py
syringe_ui/launch/: syringe_ui.launch.py
syringe_ui/syringe_ui/: main.py
syringe_ui/syringe_ui/ui/: mainwindow.ui
titration_robot_interfaces/: CMakeLists.txt  README.md  package.xml
titration_robot_interfaces/srv/: DeltaPh.srv  DerivativePhVolume.srv  Pipette.srv  Syringe.srv
titration_robot_syringe/: CMakeLists.txt  README.md  package.xml
titration_robot_syringe/include/titration_robot_syringe/: aspire_action.h  bt_executor_syringe_equivalence.h  check_dph_dv_condition.h  check_ph_by_range_condition.h  dispense_action.h  is_ph_stable_condition.h  run_once_decorator.h  set_dispense_volume_action.h
titration_robot_syringe/launch/: lab2_ready.launch.py  syringe_equivalence_executor.launch.py  titration_server.launch.py
titration_robot_syringe/src/: syringe_equivalence_executor.cpp  syringe_server.cpp
titration_robot_syringe/tree/: syringe_equivalence.xml
